# IC-Timetable

./: CMakeLists.txt  LICENSE  README.md  compile.sh  debug.txt  exe
Classes/: course.h  data.h  dependencies.h  grade.h  output.h  read.h  room.h  teacher.h
Data/: .~Input.xlsx  Completo.xlsx  Cursos.csv  Disciplinas.csv  Informatica.xlsx  Professores.csv  Salas.csv  Turmas.csv
Input/: heuristic.cc  input.cc  read.cc  solution.cc
InputData/: Cursos.csv  Disciplinas.csv  Input.xlsx  Professores.csv  Salas.csv  Turmas.csv  input.py
Legacy/: exe  main.cc
Legacy/Classes/: course.h  dependencies.h  discipline.h  grade.h  heuristic.h  input.h  objFunction.h  room.h  schedule.h  solution.h
Legacy/Data/: Cursos.csv  Disciplinas.csv  Informatica.xlsx  Input.xlsx  Professores.csv  Turmas.csv
Legacy/Input/: bakcup.txt  data.cc  input.cc  objFunction.cc  read.cc  schedule.cc
csv/: Completo.xlsx  Cursos.csv  Disciplinas.csv  Parcial2020.xlsx  Professores.csv  Salas.csv  Turmas.csv  input.py
docs/: Documentacao.txt
src/: a.out  compile.sh  debug.txt  exe  main.cpp
src/class/: abdiel.txt  agenda.cpp  agenda.hpp  discSol.cpp  discSol.hpp  discSolucao.cpp  discSolucao.hpp  disciplina.hpp  profSol.cpp  profSol.hpp  professor.hpp  salaSol.cpp  salaSol.hpp  turma.hpp  turmaSol.cpp  turmaSol.hpp
src/engine/: main.cpp  metaBackup.txt  metaheuristica.cpp  metaheuristica.hpp  metaheuristica.txt  solucao.cpp  solucao.hpp
src/io/: data.cpp  data.hpp
